--- a/client/views/index.html
+++ b/client/views/index.html
@@ -18,7 +18,7 @@
 
 <div class="container">
 
-  <h1 class="title">Timestamp Microservice —</h1>
+  <h1 class="title">Unix Timestamp Microservice —</h1>
 
   <p class="subtitle main">This service allows you to make a request to a server and view the corresponding natural and Unix time as output.</p>
 
