updated input example with correct URL from Heroku

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -22,7 +22,7 @@
 
   <p class="subtitle main">This service allows you to make a request to a server and view the corresponding natural and Unix time as output.</p>
 
-  <p class="subtitle top">The example input: <code class="code">https://url_example.com/December 10 2015</code></p>
+  <p class="subtitle top">The example input: <code class="code">https://unix-time-stamp.herokuapp.com/September 06 1999</code></p>
 
   <p class="subtitle bottom">returns this object: <code class="object">{"unix":"936576000","natural":"September 06, 1999"}</code></p>
 
