--- a/client/views/index.html
+++ b/client/views/index.html
@@ -31,14 +31,14 @@
     <p class="rules"><a id="guide" href="#!">You may submit a Unix timestamp or natural date, according to these guidelines:</a></p>
 
     <ul class="list guidelines">
-      <li>Your query must be a valid natural date of the format MM-DD-YYYY</li>
-      <li>The month may be abbreviated to the first three letters, or written in full</li>
-      <li>You may include or exclude spaces</li>
+      <li>Natural date querie must be formatted: Month-DD-YYYY</li>
+      <li>The month may be abbreviated to the first three letters, e.g. "Sep", or written in full, e.g. "September"</li>
+      <li>Your query may include or exclude spaces</li>
     </ul>
     <p class="rules"> <a id="examplesToggle" href="#!">Examples:</a></p>
     <ul class="list examples">  
       <li><span class="valid">Valid:</span> "Sep 04 2016"</li>
-      <li><span class="valid">Valid:</span> "March 29 1999"</li>
+      <li><span class="valid">Valid:</span> "March291999"</li>
       <li><span class="valid">Valid:</span> "Aug 01 2090"</li>
       <li><span class="invalid">Invalid:</span> "Sep 4 2016"</li>
       <li><span class="invalid">Invalid:</span> "Sept 4 2016"</li>
