one more update

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -31,11 +31,11 @@
     <p class="rules"><a id="guide" href="#!">You may submit a Unix timestamp or natural date, according to these guidelines:</a></p>
 
     <ul class="list guidelines">
-      <li>Natural date querie must be formatted: Month-DD-YYYY</li>
+      <li>Natural date queries must be formatted: Month-DD-YYYY</li>
       <li>The month may be abbreviated to the first three letters, e.g. "Sep", or written in full, e.g. "September"</li>
       <li>Your query may include or exclude spaces</li>
     </ul>
-    <p class="rules"> <a id="examplesToggle" href="#!">Examples:</a></p>
+    <p class="rules"> <a id="examplesToggle" href="#!">Example Queries:</a></p>
     <ul class="list examples">  
       <li><span class="valid">Valid:</span> "Sep 04 2016"</li>
       <li><span class="valid">Valid:</span> "March291999"</li>
